# avatar-video-generator

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  pyproject.toml  pytest.ini
backend/: app.py  worker.py
backend/middleware/: __init__.py  errors.py
backend/routes/: __init__.py  health.py  jobs.py
backend/services/: job_service.py  queue_service.py  storage_service.py  tts_service.py
backend/utils/: __init__.py  logger.py
logs/: .gitkeep
output/: .gitkeep
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_app.py  test_health_routes.py  test_jobs_routes.py
tests/unit/: __init__.py  test_job_service.py  test_queue_service.py  test_storage_service.py  test_video_service.py
uploads/: .gitkeep
